tests/suite/snapshots/suite__check__tests__check__bad-var-shadowing4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-var-shadowing4.xi:8:21]
   │
 8 │                     bar, baz, foo: int
   ·                     ─────────┬────────  
   ·                              ╰────────── Name already bound in environment
───╯

